[tool.poetry]
name = "python-notebook"
version = "0.1.0"
description = ""
authors = ["x0rworld <is.x0r.world@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
